icydemux: forward tag events

https://bugzilla.gnome.org/show_bug.cgi?id=630205